[Enc] Enclave invocation framework
Summary: Create new invocation framework in Enclave side.

Test Plan: all Enclave tests pass

Reviewers: lei.yul, jeffery.wsj, sanhong.lsh

Issue: https://aone.alibaba-inc.com/task/40112920

CR:
https://code.aone.alibaba-inc.com/java-tee/JavaEnclave/codereview/8038632